[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/FPSCharacter/FPSCharacter.gd" type="Script" id=1]
[ext_resource path="res://Assets/Environments/Host.tres" type="Environment" id=2]
[ext_resource path="res://Assets/Audio/heartbeat.wav" type="AudioStream" id=3]

[sub_resource type="CylinderShape" id=1]
radius = 0.3
height = 0.5

[sub_resource type="SphereMesh" id=2]
radius = 0.25
height = 0.5

[sub_resource type="Animation" id=3]
resource_name = "heartbeat"
loop = true
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0, 0.3 )
}

[node name="FPSCharacter" type="KinematicBody" groups=[
"Player",
]]
input_ray_pickable = false
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Cam_y" type="Spatial" parent="."]

[node name="Cam_x" type="Spatial" parent="Cam_y"]

[node name="Camera" type="Camera" parent="Cam_y/Cam_x"]

[node name="GhostCast" type="RayCast" parent="Cam_y/Cam_x/Camera"]
enabled = true
exclude_parent = false
cast_to = Vector3( 0, 0, -2.5 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="SpotLight" type="SpotLight" parent="Cam_y/Cam_x/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.20804, 0, -0.606797 )
light_color = Color( 0.988235, 0.94902, 0.858824, 1 )
light_energy = 1.5
shadow_enabled = true
shadow_bias = 0.05
shadow_reverse_cull_face = true
spot_range = 10.0

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -5, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "heartbeat"
anims/heartbeat = SubResource( 3 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
